[gd_scene load_steps=22 format=3 uid="uid://dlel4wfarjd1c"]

[ext_resource type="Texture2D" uid="uid://byfbk0kjgersq" path="res://assets/Art Folder/backgrounds/playground-background-revised.png" id="1_yw4wk"]
[ext_resource type="Script" path="res://scripts/player_controller.gd" id="2_nsr2b"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="3_mjl51"]
[ext_resource type="Script" path="res://scripts/player_manager.gd" id="4_cvtrv"]
[ext_resource type="PackedScene" uid="uid://ci03oqour7ioh" path="res://test_scenes/build_scene.tscn" id="5_n0oa0"]
[ext_resource type="PackedScene" uid="uid://ct7132vh51c8q" path="res://test_scenes/check_height.tscn" id="6_r0jvv"]
[ext_resource type="PackedScene" uid="uid://gbvopuoe0kt8" path="res://game_objects/folding_minigame.tscn" id="7_vbw40"]
[ext_resource type="PackedScene" uid="uid://dsenqsyvi5a6o" path="res://test_scenes/bird-launcher.tscn" id="8_jd12v"]
[ext_resource type="Texture2D" uid="uid://cfut18h473sjm" path="res://assets/Art Folder/backgrounds/background-floor-tex-2.png" id="10_sqtde"]
[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="11_bf1fp"]
[ext_resource type="AudioStream" uid="uid://ctt2q50ouuuh2" path="res://assets/Music/background music 1.mp3" id="12_m2nlu"]
[ext_resource type="Script" path="res://levels/Label.gd" id="12_q87wk"]
[ext_resource type="Script" path="res://levels/MainUI.gd" id="13_rj3vm"]
[ext_resource type="LabelSettings" uid="uid://csv4pvy2jn3pd" path="res://default_label.tres" id="13_tbsy6"]
[ext_resource type="Script" path="res://game_objects/start_message.gd" id="13_uxu28"]
[ext_resource type="AudioStream" uid="uid://bebcrweovw7w3" path="res://assets/Music/background music 2.mp3" id="13_y5ye8"]
[ext_resource type="PackedScene" uid="uid://dvx56heuihmeh" path="res://levels/main_menu.tscn" id="15_0chs3"]
[ext_resource type="FontFile" uid="uid://b2lvmcmegdsc" path="res://assets/Art Folder/Dekko-Regular.ttf" id="18_rq2gx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utvaf"]
size = Vector2(3836, 1084)

[sub_resource type="LabelSettings" id="LabelSettings_gceno"]
font = ExtResource("18_rq2gx")
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_cx0tl"]
font = ExtResource("18_rq2gx")
font_size = 100

[node name="Root" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(760, 568)
zoom = Vector2(0.4, 0.4)

[node name="Controllers" type="Node2D" parent="."]

[node name="Player1" type="Node2D" parent="Controllers" node_paths=PackedStringArray("player_manager")]
script = ExtResource("2_nsr2b")
pc_launch = "player1_launch"
pc_fold_left = "player1_fold_left"
pc_fold_right = "player1_fold_right"
build = "player1_build"
player_manager = NodePath("../../Game/Player1")

[node name="Player2" type="Node2D" parent="Controllers" node_paths=PackedStringArray("player_manager")]
script = ExtResource("2_nsr2b")
pc_launch = "player2_launch"
pc_fold_left = "player2_fold_left"
pc_fold_right = "player2_fold_right"
build = "player2_build"
player_manager = NodePath("../../Game/Player2")

[node name="Game" type="Node2D" parent="."]
position = Vector2(-1128, 0)
script = ExtResource("3_mjl51")

[node name="Timer" type="Timer" parent="Game"]
wait_time = 2.0

[node name="Player1" type="Node2D" parent="Game"]
position = Vector2(1224, 280)
script = ExtResource("4_cvtrv")
player_name = "Left Player"

[node name="Building" parent="Game/Player1" node_paths=PackedStringArray("to_parent", "spawn_pos") instance=ExtResource("5_n0oa0")]
position = Vector2(-742, -489)
scale = Vector2(2, 2)
to_parent = NodePath("../../../World")
spawn_pos = NodePath("../../../World/SpawnPos1")
block_layer_mask = 1
block_collision_mask = 1

[node name="CheckHeight" parent="Game/Player1" instance=ExtResource("6_r0jvv")]
position = Vector2(-776, -800)
scale = Vector2(2, 1)

[node name="Fold" type="Node2D" parent="Game/Player1"]
position = Vector2(-268, 857)

[node name="FoldingMinigame" parent="Game/Player1/Fold" instance=ExtResource("7_vbw40")]
scale = Vector2(0.75, 0.75)

[node name="Firing" parent="Game/Player1" instance=ExtResource("8_jd12v")]
z_index = 1
position = Vector2(-403, 528)
bird_collision_layer = 2
bird_collision_mask = 2

[node name="firing" parent="Game/Player1/Firing" index="0"]
position = Vector2(-128, 112)

[node name="Player2" type="Node2D" parent="Game"]
position = Vector2(2144, 280)
script = ExtResource("4_cvtrv")
player_name = "Right Player"

[node name="Building" parent="Game/Player2" node_paths=PackedStringArray("to_parent", "spawn_pos") instance=ExtResource("5_n0oa0")]
position = Vector2(-126, -492)
scale = Vector2(2, 2)
to_parent = NodePath("../../../World")
spawn_pos = NodePath("../../../World/SpawnPos2")
block_layer_mask = 2
block_collision_mask = 2

[node name="CheckHeight" parent="Game/Player2" instance=ExtResource("6_r0jvv")]
position = Vector2(16, -800)
scale = Vector2(2, 2)

[node name="Fold" type="Node2D" parent="Game/Player2"]
position = Vector2(685, 860)

[node name="FoldingMinigame" parent="Game/Player2/Fold" instance=ExtResource("7_vbw40")]
scale = Vector2(0.75, 0.75)

[node name="Firing" parent="Game/Player2" instance=ExtResource("8_jd12v")]
z_index = 1
position = Vector2(824, 528)
scale = Vector2(-1, 1)
direction_multi = -1
bird_collision_layer = 1
bird_collision_mask = 1

[node name="firing" parent="Game/Player2/Firing" index="0"]
position = Vector2(-128, 112)

[node name="Sprite2D" type="Sprite2D" parent="Game"]
z_index = -5
position = Vector2(1880, 550)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_yw4wk")

[node name="World" type="Node2D" parent="."]
position = Vector2(656, 704)

[node name="SpawnPos1" type="Node2D" parent="World"]
position = Vector2(-832, -1096)
scale = Vector2(5, 5)

[node name="SpawnPos2" type="Node2D" parent="World"]
position = Vector2(1048, -1096)
scale = Vector2(5, 5)

[node name="RigidBody2D" type="RigidBody2D" parent="World"]
z_index = -5
position = Vector2(0, 1320)
rotation = 3.14159
scale = Vector2(2, 1)
collision_layer = 15
collision_mask = 15
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/RigidBody2D"]
position = Vector2(2.00003, 538)
shape = SubResource("RectangleShape2D_utvaf")

[node name="Sprite2D" type="Sprite2D" parent="World/RigidBody2D"]
position = Vector2(-52.5012, 868)
scale = Vector2(0.391226, 0.794269)
texture = ExtResource("10_sqtde")
flip_v = true

[node name="Audio" type="Node2D" parent="."]
script = ExtResource("11_bf1fp")
tracks = Array[AudioStream]([ExtResource("12_m2nlu"), ExtResource("13_y5ye8")])
play_on_ready = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="TimerLabel" type="Label" parent="." node_paths=PackedStringArray("timer")]
offset_left = 656.0
offset_top = 1086.0
offset_right = 1279.0
offset_bottom = 1221.0
text = "alkdjflkasdjfa"
label_settings = ExtResource("13_tbsy6")
script = ExtResource("12_q87wk")
timer = NodePath("../Game/Timer")

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("game_manager")]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1504.0
offset_bottom = 944.0
script = ExtResource("13_rj3vm")
game_manager = NodePath("../Game")
game_end_sceen = ExtResource("15_0chs3")

[node name="OnGameStart" type="Control" parent="UI"]
process_mode = 1
layout_mode = 1
anchor_left = -0.426
anchor_top = -0.22
anchor_right = 1.441
anchor_bottom = 1.475
offset_left = 640.704
offset_top = 207.68
offset_right = -591.264
offset_bottom = -464.4

[node name="Label" type="Label" parent="UI/OnGameStart"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.904
anchor_bottom = 1.034
offset_left = -675.0
offset_top = 272.0
offset_right = 751.296
offset_bottom = -343.552
text = "
"
label_settings = ExtResource("13_tbsy6")
horizontal_alignment = 1
script = ExtResource("13_uxu28")

[node name="GameEnd" type="Control" parent="UI"]
layout_mode = 1
anchor_left = -0.426
anchor_top = -0.22
anchor_right = 1.441
anchor_bottom = 1.475
offset_left = 640.704
offset_top = 207.68
offset_right = -591.264
offset_bottom = -464.4

[node name="MainMenu" type="Button" parent="UI/GameEnd"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_top = 224.0
offset_right = 696.0
offset_bottom = 255.0
grow_vertical = 2
scale = Vector2(3, 3)
text = "Main Menu"

[node name="EndLabel" type="Label" parent="UI/GameEnd"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.904
anchor_bottom = 1.034
offset_left = -688.0
offset_top = 256.0
offset_right = 751.296
offset_bottom = -343.552
text = "
"
label_settings = ExtResource("13_tbsy6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="Label" parent="UI"]
z_index = 2
layout_mode = 0
offset_left = -688.0
offset_top = 184.0
offset_right = 2199.0
offset_bottom = 1026.0
text = "Paused"
label_settings = SubResource("LabelSettings_gceno")
horizontal_alignment = 1

[node name="PauseOverlay" type="ColorRect" parent="UI/Pause"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2591.5
offset_top = -976.0
offset_right = 2408.5
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
color = Color(0, 0, 0, 0.505882)

[node name="MainMenu" type="Button" parent="UI/Pause"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = 84.0
offset_right = -52.4999
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Label" type="Label" parent="UI/Pause/MainMenu"]
layout_mode = 0
offset_left = 5.33333
offset_right = 192.333
offset_bottom = 167.0
scale = Vector2(0.2, 0.2)
text = "Main Menu
"
label_settings = SubResource("LabelSettings_cx0tl")

[node name="Resume" type="Button" parent="UI/Pause"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.5
offset_top = -114.0
offset_right = -53.4999
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Label" type="Label" parent="UI/Pause/Resume"]
layout_mode = 0
offset_left = 12.9999
offset_right = 323.0
offset_bottom = 167.0
scale = Vector2(0.2, 0.2)
text = "Resume
"
label_settings = SubResource("LabelSettings_cx0tl")

[editable path="Game/Player1/Firing"]
[editable path="Game/Player2/Firing"]
